new class for opening file dialogs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 ﻿cmake_minimum_required(VERSION 3.29)
-project(AudioVisualizer LANGUAGES CXX)
+project(AudioVisualizer LANGUAGES C CXX)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
@@ -23,6 +23,38 @@ FetchContent_Declare(CLI11
         SYSTEM
 )
 FetchContent_MakeAvailable(CLI11)
+
+FetchContent_Declare(nfd
+        GIT_REPOSITORY https://github.com/mlabbe/nativefiledialog.git
+        GIT_TAG master
+        GIT_SHALLOW ON
+        EXCLUDE_FROM_ALL
+        SYSTEM
+)
+FetchContent_MakeAvailable(nfd)
+
+if(WIN32)
+    set(NFD_PLATFORM_SRC ${nfd_SOURCE_DIR}/src/nfd_win.cpp)
+elseif(APPLE)
+    set(NFD_PLATFORM_SRC ${nfd_SOURCE_DIR}/src/nfd_cocoa.m)
+else()
+    set(NFD_PLATFORM_SRC ${nfd_SOURCE_DIR}/src/nfd_gtk.c)
+endif()
+
+add_library(nfd STATIC
+        ${nfd_SOURCE_DIR}/src/nfd_common.c
+        ${NFD_PLATFORM_SRC}
+)
+
+target_include_directories(nfd PUBLIC ${nfd_SOURCE_DIR}/src/include)
+
+# Linux: link z GTK3
+if(UNIX AND NOT APPLE)
+    find_package(PkgConfig REQUIRED)
+    pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
+    target_include_directories(nfd PUBLIC ${GTK3_INCLUDE_DIRS})
+    target_link_libraries(nfd PUBLIC ${GTK3_LIBRARIES})
+endif()
 #endregion
 
 # Executable
@@ -30,6 +62,7 @@ add_executable(AudioVisualizer
         src/main.cpp
         includes/AudioVisualizer.h
         src/AudioVisualizer.cpp
+        src/FileDialog.cpp
 )
 
 target_compile_features(AudioVisualizer PRIVATE cxx_std_17)
@@ -39,4 +72,5 @@ target_link_libraries(AudioVisualizer PRIVATE
         SFML::Graphics
         SFML::Audio
         CLI11::CLI11
+        nfd
 )
